--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "type": "module",
   "dependencies": {
     "@types/tldjs": "^2.3.4",
+    "apexcharts": "^3.46.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "tldjs": "^2.3.1",
     "webextension-polyfill": "^0.10.0"
