--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@types/tldjs": "^2.3.4",
     "apexcharts": "^3.46.0",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "tldjs": "^2.3.1",
     "webextension-polyfill": "^0.10.0"
