--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "vite build",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "vitest"
   },
   "type": "module",
   "dependencies": {
@@ -47,6 +48,7 @@
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vitest": "^2.0.2"
   }
 }
